--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vue-scrollto": "^2.20.0",
     "vuex": "^3.4.0"
