--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "v-lazy-image": "^1.4.0",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.0",
     "vue-carousel": "^0.18.0",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
